--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,15 @@
-/.phpunit.cache
 /node_modules
-/public/build
 /public/hot
 /public/storage
 /storage/*.key
 /vendor
 .env
 .env.backup
-.env.production
-Homestead.json
+.phpunit.result.cache
 Homestead.yaml
-auth.json
-npm-debug.log
-yarn-error.log
-/.fleet
-/.idea
+Homestead.json
+/.vagrant
+.idea
 /.vscode
+.DS_Store
+Thumbs.db
